pull out common models into new module